# Boba-Tea

./: .dockerignore  .gitignore  Makefile  NEXT_SESSION_GUIDE.md  README.md
.github/workflows/: ci.yml  deploy-aws.yml
api/: .env.example  Dockerfile  pyproject.toml
api/app/: catalog.py  gemini.py  main.py  schemas.py  services.py  settings.py  visualization_jobs.py  worker.py
api/tests/: test_api.py
scripts/aws/: bootstrap.sh  deploy.sh
web/: .env.example  index.html
web/public/: manifest.webmanifest
web/src/: App.css  App.tsx  api.ts  index.css
